--- a/src/app/products/pages/basics-pages/basics-pages.component.html
+++ b/src/app/products/pages/basics-pages/basics-pages.component.html
@@ -1,26 +1,85 @@
+<p-panel header="Pipes Basicos" class="p-1">
 
-<p-panel [showHeader]="false">
-
-<h1>Pipes basicos</h1>
-
-<p>Pipes incluidos en Angular-- Usualmente en el common Module </p>
+  <p>Pipes incluidos en Angular-- Usualmente en el common Module </p>
 
 </p-panel>
 
-<div class="p-grid">
-  <div class="p-col-4">
+<div class="grid">
+
+
+  <div class="col-12 md:col-4">
 
     <p-card header="uppercase">
       {{nameLower | uppercase }}
     </p-card>
+
+  </div>
+  <div class="col-12 md:col-4">
     <p-card header="lowercase">
       {{nameUpper | lowercase}}
     </p-card>
+  </div>
+  <div class="col-12 md:col-4">
     <p-card header="titlecase">
       {{fullName | titlecase}}
     </p-card>
 
+  </div>
 
+  <div class="col-12 md:col-6">
+    <p-card header="date">
+      <ol>
+        <li> fecha</li>
+        <li> fecha | date </li>
+        <li> fecha | date:"short"</li>
+        <li> fecha | date:"long"</li>
+        <li> fecha | date:"MMMM"</li>
+        <li> fecha | date:"MMMM dd,yyyy"</li>
+
+      </ol>
+      <hr>
+
+        <ol>
+          <li>fecha | date:"long":"GMT-6"</li>
+          <li>fecha | date:"long":"GMT-4"</li>
+         <li>fecha | date:"long":'':"es-VE"</li>
+         <li>fecha | date:"long":'':"fr-CA"</li>
+         <li>fecha | date:"long":'':"en-US"</li>
+
+
+          <li></li>
+
+        </ol>
+    </p-card>
+
+  </div>
+  <div class="col-12 md:col-6">
+    <p-card header="date">
+      <ol>
+        <li> {{customDate}}</li>
+        <li> {{customDate | date }}</li>
+        <li>{{customDate | date:"short" }}</li>
+        <li>{{customDate | date:"long" }}</li>
+        <li>{{customDate | date:"MMMM" }}</li>
+        <li>{{customDate | date:"MMMM dd,yyyy" }}</li>
+
+      </ol>
+      <hr>
+
+      <ol>
+        <li>{{ customDate | date:"long":"GMT-6" }}</li>
+        <li>{{ customDate | date:"long":"GMT-4" }}</li>
+        <li>{{ customDate | date:"long":"":"es-VE" }}</li>
+        <li>{{ customDate | date:"long":"":"fr-CA" }}</li>
+        <li>{{ customDate | date:"long":"":"en-US" }}</li>
+
+
+        <li></li>
+
+      </ol>
+
+
+    </p-card>
 
   </div>
 
