--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -1,1 +1,94 @@
-<p>uncommon-page works!</p>
+<p-panel header="Pipes No Tan comunes" class="p-1">
+
+  <p>Pipes incluidos en Angular-- Usualmente en el common Module </p>
+
+</p-panel>
+
+<div class="grid">
+
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+      <p>
+        Saludos {{ name }} es un placer {{ gender | i18nSelect:invitationMap }} a nuestro evento.
+      </p>
+      <p-button
+      (click)="changeClient()"
+      label="Cambiar persona"
+      >
+
+      </p-button>
+
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+      <p>
+        Actualmente  {{clients.length | i18nPlural:clientMaps }}  
+
+    
+    <p-button
+    (click)="deleteClient()"
+    label="Borrar cliente"
+    >
+
+    </p-button>
+     
+  
+    </p-fieldset>
+
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="Slice Pipe" [toggleable]="true">
+      <b>original</b>
+      <pre>{{ clients  }}</pre>
+      
+      <b> slice:0:2</b>
+      <pre>{{ clients | slice:0:2 }}</pre>
+
+
+    </p-fieldset> 
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="Json Pipe" [toggleable]="true">
+      
+
+        <pre>{{ person | json}}</pre>
+      
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+      
+
+     <ul>
+      <li *ngFor="let item of person | keyvalue">
+         <b> {{ item.key | titlecase}}:</b> {{item.value}}
+        
+      </li>
+     </ul>
+
+      
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="Async Pipes" [toggleable]="true">
+      
+        <p> {{ mybservableTimer | async}} </p>
+        <pre> {{ mybservableTimer | async}}</pre>
+         <pre>** resolviendo observable** </pre>
+         <hr>
+        <pre *ngIf="!(promiseValue | async)" > resolviendo promesa </pre>
+        <pre> {{ promiseValue | async}}</pre>
+        <pre> **resolviendo promesa**</pre>
+    </p-fieldset>
+  </div>
+  
+</div>
+
+
